fix table width issue on mobile

--- a/src/components/Synthetics/TradeHistory/TradeHistorySynthetics.scss
+++ b/src/components/Synthetics/TradeHistory/TradeHistorySynthetics.scss
@@ -4,7 +4,7 @@
   }
 
   &-table {
-    width: max(100%, 900px);
+    width: max(100%, 900px) !important;
 
     // Table causes global layout issues on mobile
     margin-right: -10px;
